<resources>
    <string name="app_name">EaseShop</string>
    <string name="marketplace">Marketplace</string>
    <string name="my_account">My account</string>
    <string name="my_orders">My Orders</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <string name="vendors">Vendors</string>
    <string name="double_back_press">Please click BACK again to exit</string>
    <string name="search">Search</string>
    <string name="search_hint">Searc for any shop or product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash">Splash</string>
    <string name="price">Price :</string>
    <string name="price_value">$ 30</string>
</resources>